<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey4"
        app:cardCornerRadius="16dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/llRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/repoImg"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="@string/profile_image"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@tools:sample/avatars" />

                <Button
                    android:layout_width="62dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/green"
                    android:text="@string/star"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="14sp"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingVertical="16dp"
                android:paddingEnd="15dp"
                tools:ignore="RtlSymmetry">

                <LinearLayout
                    android:id="@+id/linearLayout9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/habit_tracker"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/isPubic"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_marginStart="6dp"
                        android:src="@drawable/ic_baseline_public_24"
                        android:contentDescription="@string/ispublic" />

                </LinearLayout>

                <TextView
                    android:id="@+id/desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_mini_habit_tracker_app"
                    android:textColor="@color/grey1"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout9" />

                <LinearLayout
                    android:id="@+id/linearLayout8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/desc">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/blue1"
                        android:visibility="visible"
                        app:cardCornerRadius="2dp"
                        app:cardUseCompatPadding="true">

                        <TextView
                            android:id="@+id/cardTxt1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginHorizontal="5dp"
                            android:layout_marginVertical="1dp"
                            android:text="@string/habit"
                            android:textAlignment="center"
                            android:textColor="@color/blue"
                            android:textSize="10sp"
                            tools:ignore="SmallSp" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/blue1"
                        android:visibility="visible"
                        app:cardCornerRadius="2dp"
                        app:cardUseCompatPadding="true">

                        <TextView
                            android:id="@+id/cardTxt3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginHorizontal="5dp"
                            android:layout_marginVertical="1dp"
                            android:text="@string/app"
                            android:textAlignment="center"
                            android:textColor="@color/blue"
                            android:textSize="10sp"
                            tools:ignore="SmallSp" />

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <androidx.cardview.widget.CardView
                            android:layout_width="10dp"
                            android:layout_height="10dp"
                            app:cardBackgroundColor="@color/lang3"
                            app:cardCornerRadius="10dp" />

                        <TextView
                            android:id="@+id/lang"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:text="@string/javascript"
                            android:textColor="@color/grey1"
                            android:textSize="10sp"
                            tools:ignore="SmallSp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_star_24"
                            android:contentDescription="@string/stars" />

                        <TextView
                            android:id="@+id/stars"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="1dp"
                            android:text="@string/_1_250"
                            android:textColor="@color/grey1"
                            android:textSize="10sp"
                            tools:ignore="SmallSp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_git_branch"
                            android:contentDescription="@string/forks" />

                        <TextView
                            android:id="@+id/fork"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="1dp"
                            android:text="@string/_500"
                            android:textColor="@color/grey1"
                            android:textSize="10sp"
                            tools:ignore="SmallSp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/lastUpdated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/updated_yesterday"
                        android:textColor="@color/grey1"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
